Revert security config.